--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,14 @@
             android:name=".kekka"
             android:label="@string/title_activity_kekka" >
         </activity>
+        <activity
+            android:name=".Result"
+            android:label="@string/title_activity_result" >
+        </activity>
+        <activity
+            android:name=".ranking"
+            android:label="@string/title_activity_ranking" >
+        </activity>
     </application>
 
 </manifest>
